<resources>
    <string name="app_name">Medieval Dices</string>

    <string name="d4">D4</string>
    <string name="d6">D6</string>
    <string name="d8">D8</string>
    <string name="d10">D10</string>
    <string name="d12">D12</string>
    <string name="d20">D20</string>
    <string name="amount_plus">+</string>
    <string name="amount_minus">-</string>
    <string name="result"></string>
</resources>
